--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 						</div>
 
 						<div class="text-gray-400 text-center md:text-left">
-							Our modern web and mobile application allow you to keep track of your finances wherever you are in the world.
+							See exactly where your money goes each month. Receive notification when you're close to hitting your limits
 						</div>
 
 					</div>
@@ -94,7 +94,7 @@
 						</div>
 
 						<div class="text-gray-400 text-center md:text-left">
-							Our modern web and mobile application allow you to keep track of your finances wherever you are in the world.
+							We don't do branches. Open your account in minutes online and start taking contorl of your finances right away.
 						</div>
 
 					</div>
@@ -106,7 +106,7 @@
 						</div>
 
 						<div class="text-gray-400 text-center md:text-left">
-							Our modern web and mobile application allow you to keep track of your finances wherever you are in the world.
+							Manange your savings, investments, pension, and much more form one account. Tracking your money has never been easire
 						</div>
 					</div>
 				</div>
@@ -127,7 +127,7 @@
 								<h5 class="text-gray-400">By Clare Redinton</h5>
 								<h3 class="text-gray-700 text-lg my-3 losty"><a href=''>Receive money in any currency with no fees.</a></h3>
 								<div class="text-gray-400">
-									Lorem ipsum dolor sit amet consectetur adipisicing, elit. Exercitationem aliquam iste mollitia tenetur optio non sit, enim iusto perspiciatis.
+									The world is getting smaller and we're becoming more mobile. So why should you be forced to only receive mone in a single...
 								</div>
 							</div>
 					</div>
@@ -136,10 +136,10 @@
 							<img src='images/image-restaurant.jpg' class="rounded-t-md" alt="currency Image">
 
 							<div class="bg-white px-4 py-6 rounded-b-md shadow-md">
-								<h5 class="text-gray-400">By Clare Redinton</h5>
-								<h3 class="text-gray-700 text-lg my-3 losty"><a href=''>Receive money in any currency with no fees.</a></h3>
+								<h5 class="text-gray-400">By Wilson Hutton</h5>
+								<h3 class="text-gray-700 text-lg my-3 losty"><a href=''>Treat yourself without worring about money.</a></h3>
 								<div class="text-gray-400">
-									Lorem ipsum dolor sit amet consectetur adipisicing, elit. Exercitationem aliquam iste mollitia tenetur optio non sit, enim iusto perspiciatis.
+									Our simple budgeting feature allows you to separate our your spending and set realistic limits each month. That means you...
 								</div>
 							</div>
 					</div>
@@ -147,10 +147,10 @@
 					<div class="art-3 md:w-1/2 lg:w-3/12 px-4 mt-10">
 							<img src="images/image-plane.jpg" class="rounded-t-md" alt="currency Image">
 							<div class="bg-white px-4 py-6 rounded-b-md shadow-md">
-								<h5 class="text-gray-400">By Clare Redinton</h5>
-								<h3 class="text-gray-700 text-lg my-3 losty" ><a href="">Receive money in any currency with no fees.</a></h3>
+								<h5 class="text-gray-400">By Wilson Hutton</h5>
+								<h3 class="text-gray-700 text-lg my-3 losty" ><a href="">Take your Easybank card wherever you go .</a></h3>
 								<div class="text-gray-400">
-									Lorem ipsum dolor sit amet consectetur adipisicing, elit. Exercitationem aliquam iste mollitia tenetur optio non sit, enim iusto perspiciatis.
+									We want you to enjoy your travles. This is why we don't charge any fees on purchases while you're abroad. We'll even show you...
 								</div>
 							</div>
 					</div>
