--- a/public/index.html
+++ b/public/index.html
@@ -160,9 +160,9 @@
 
 							<div class="bg-white px-4 py-6 rounded-b-md shadow-md">
 								<h5 class="text-gray-400">By Clare Redinton</h5>
-								<h3 class="text-gray-700 text-lg my-3 losty"><a href=''>Receive money in any currency with no fees.</a></h3>
+								<h3 class="text-gray-700 text-lg my-3 losty"><a href=''>Our invite-only Beta accounts are now live.</a></h3>
 								<div class="text-gray-400">
-									Lorem ipsum dolor sit amet consectetur adipisicing, elit. Exercitationem aliquam iste mollitia tenetur optio non sit, enim iusto perspiciatis.
+									After a lot of hard work by the whole team, we're excited to launch our closed beta. It's easy to request an invite through the site...
 								</div>
 							</div>
 					</div>
